src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ASA_Grad_PLUS_Loans_2008__c</fullName>
        <description>The total number of ASA Grad PLUS Loans for the school for fiscal year 2008.</description>
        <inlineHelpText>The total number of ASA Grad PLUS Loans for the school for fiscal year 2008.</inlineHelpText>
        <label>ASA # Grad PLUS Loans 2008</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Record_ID__c</fullName>
        <description>Account record ID</description>
        <formula>Id</formula>
        <inlineHelpText>Account record ID</inlineHelpText>
        <label>Account Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activation_Status_Reports_Frequency__c</fullName>
        <label>Activation Status Reports Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Must be checked if we have an active contact with a school.</description>
        <label>Active Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_School__c</fullName>
        <formula>NOT(ISPICKVAL( Current_Contract_Year_Rating__c , &quot;Lost&quot;))</formula>
        <label>Active School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggregator_Name__c</fullName>
        <label>Aggregator Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggregator__c</fullName>
        <label>Aggregator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <inlineHelpText>The short name for a school; e.g. Massachusetts Institute of Technology = MIT</inlineHelpText>
        <label>Alias</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <inlineHelpText>This check mark indicates that the discount for the aggregator is approved.</inlineHelpText>
        <label>Approved</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Authorization_Date__c</fullName>
        <description>Date that receipt of additional data required for CDR Trending report package was authorized.</description>
        <inlineHelpText>This date should be entered when updating the CDR Trending Report Package field to &apos;Data Authorized&apos; and should be the date of execution of either the contract or contract amendment.</inlineHelpText>
        <label>Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <description>Location of the stored school logo</description>
        <inlineHelpText>Do not update this field until the school logo has been published.</inlineHelpText>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branded_Elements_Notes__c</fullName>
        <description>This field contains notes about the branded elements used by this account on their Co-Branded ASA Direct site.</description>
        <inlineHelpText>This field contains notes about the branded elements used by this account on their Co-Branded ASA Direct site.</inlineHelpText>
        <label>Branded Elements / Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ByPassAggregatorFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassAggregatorFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDR_Trending_Report_Package__c</fullName>
        <label>CDR Trending Report Package</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Data Authorized</fullName>
                </value>
                <value>
                    <fullName>Receiving Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CU_Join_Number__c</fullName>
        <inlineHelpText>Used to indicate Credit Union number, similar to the OE Code.</inlineHelpText>
        <label>CU Join Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campus Consultant</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This user is not a designated Campus Consultant.</errorMessage>
            <filterItems>
                <field>User.Cost_Center__c</field>
                <operation>equals</operation>
                <value>16350</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>CACs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created so that a formula can be used to &apos;echo&apos; fields/field values onto the Account object.</description>
        <label>Case Data</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>This field helps categorize the type of school.</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Christian Colleges &amp; Universities</fullName>
                </value>
                <value>
                    <fullName>Historical Black Colleges &amp; Universities</fullName>
                </value>
                <value>
                    <fullName>Law School</fullName>
                </value>
                <value>
                    <fullName>Medical School</fullName>
                </value>
                <value>
                    <fullName>Corporate Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charitable_Giving__c</fullName>
        <label>Charitable Giving</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charter_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Branded_URL__c</fullName>
        <label>Co-Branded URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Co_Branded_Website__c</fullName>
        <label>Co-Branded Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End__c</fullName>
        <label>Contract End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Exception_Note__c</fullName>
        <label>Contract Exception Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Start__c</fullName>
        <label>Contract Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Renewal__c</fullName>
        <label>Current Contract Renewal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Status_Date__c</fullName>
        <label>Current Contract Status Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Year_Q2_Rating__c</fullName>
        <description>This field shows the rating for the second quarter of the clients contract.</description>
        <inlineHelpText>This field shows the rating for the second quarter of the clients contract.</inlineHelpText>
        <label>Current Contract Year Q2 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Contract_Year_Q4_Rating__c</fullName>
        <description>This field shows the rating for the fourth quarter of the clients contract.</description>
        <inlineHelpText>This field shows the rating for the fourth quarter of the clients contract.</inlineHelpText>
        <label>Current Contract Year Q4 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Contract_Year_Rating__c</fullName>
        <description>This field shows the rating for the first quarter of the clients contract.</description>
        <inlineHelpText>Current rating SALT contract.</inlineHelpText>
        <label>Current Contract Year Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_contract_Year_Q3_Rating__c</fullName>
        <description>This field shows the rating for the third quarter of the clients contract.</description>
        <inlineHelpText>This field shows the rating for the third quarter of the clients contract.</inlineHelpText>
        <label>Current Contract Year Q3 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Date__c</fullName>
        <inlineHelpText>This field is required when the Reporting Frequency = Custom</inlineHelpText>
        <label>Custom Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <externalId>true</externalId>
        <label>Customer Code</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Customer_Profile__c</fullName>
        <description>Created By Appirio to store profile name of Self-registering customers. This is how Employer Market specific profiles are assigned appropriately.</description>
        <inlineHelpText>Created By Appirio to store profile name of Self-registering customers. This is how Employer Market specific profiles are assigned appropriately.</inlineHelpText>
        <label>Customer Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customizable_Reports_Customer__c</fullName>
        <label>Customizable Reports: Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customizable_Reports_User__c</fullName>
        <label>Customizable Reports: User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customized_MM101_Information__c</fullName>
        <description>Please describe what is customized about the SALT Courses Setup.</description>
        <inlineHelpText>Please describe what is customized about the SALT Courses Setup.</inlineHelpText>
        <label>Customized SALT Courses Information</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demog_File_ID__c</fullName>
        <description>This gets updated by Process Builder when Prod Offerings is added/changed.</description>
        <label>Demog File ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demog_File__c</fullName>
        <inlineHelpText>How does the customer send us their Demographic File?</inlineHelpText>
        <label>Demog File Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Upload</fullName>
                </value>
                <value>
                    <fullName>SFTP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_of_Risk_Loss_Reason__c</fullName>
        <label>Description of Risk/Loss Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use_Name_for_Promos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a client’s contract prohibits us from using their name in our promotions.</description>
        <label>Do Not Use Name for Promos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDMS_Communication_Attempts__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EDMS Communication Attempts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDMS_Communications_Results__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EDMS Communications Results</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDMS_School_Portfolio_Profile__c</fullName>
        <defaultValue>true</defaultValue>
        <label>EDMS School Portfolio Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Go_Live_Date__c</fullName>
        <label>Estimated Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Exception__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Exception</fullName>
                </value>
                <value>
                    <fullName>Variable Pricing</fullName>
                </value>
                <value>
                    <fullName>Reduced Annual Price</fullName>
                </value>
                <value>
                    <fullName>Avoid RFP Processing</fullName>
                </value>
                <value>
                    <fullName>School Type Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibit_A_Acknowledgement__c</fullName>
        <inlineHelpText>This date reflects when the school acknowledges receipt of the revised Exhibit A in the SALT contract.</inlineHelpText>
        <label>Exhibit &quot;A&quot; &lt;br&gt;Acknowledgement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAMS__c</fullName>
        <label>FAMS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASA Direct</fullName>
                </value>
                <value>
                    <fullName>Datatel - Colleague</fullName>
                </value>
                <value>
                    <fullName>eCourier</fullName>
                </value>
                <value>
                    <fullName>Ed Express</fullName>
                </value>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>HomeGrown</fullName>
                </value>
                <value>
                    <fullName>IRIS</fullName>
                </value>
                <value>
                    <fullName>Jenzabar CX (CARS)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>PeopleSoft</fullName>
                </value>
                <value>
                    <fullName>PowerFAIDS</fullName>
                </value>
                <value>
                    <fullName>ScholarNet</fullName>
                </value>
                <value>
                    <fullName>SCT Banner</fullName>
                </value>
                <value>
                    <fullName>SCT Matrix</fullName>
                </value>
                <value>
                    <fullName>SIS</fullName>
                </value>
                <value>
                    <fullName>Univers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Finance Contacts 2)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Contact 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Finance Contact 3)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Time_Enrollment__c</fullName>
        <label>Full-Time Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <description>This is for Foundation (Grant) processing only.</description>
        <inlineHelpText>Select the type of gift this represents for the Foundation/Grant.</inlineHelpText>
        <label>Gift Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>In-Kind</fullName>
                </value>
                <value>
                    <fullName>Pledge</fullName>
                </value>
                <value>
                    <fullName>Pledge Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Goal_1__c</fullName>
        <description>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module
 
CM - Can be updated after initial pre-implementation meeting, or completed after having initial implementation meeting</description>
        <inlineHelpText>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</inlineHelpText>
        <label>Goal 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2__c</fullName>
        <description>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module
 
CM - Can be updated after initial pre-implementation meeting, or completed after having initial implementation meeting</description>
        <inlineHelpText>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</inlineHelpText>
        <label>Goal 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_3__c</fullName>
        <description>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</description>
        <inlineHelpText>Free form field that allows us to determine what it top priority that the customer is expecting with SALT…IE: Lower delinquency, Have students complete MM101 module</inlineHelpText>
        <label>Goal 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Amount__c</fullName>
        <inlineHelpText>This field shows the total Grant amount that will be provided.  The Grant Period reflects the payment installments related to this total amount.  For example, a $100,000 for 5 years = $20,000 per year.</inlineHelpText>
        <label>Total Grant Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Period__c</fullName>
        <label>Grant Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>6 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_Code__c</fullName>
        <description>Code that goes with the Guarantee Agency</description>
        <label>Guarantor OE</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guarantor_System_Provider__c</fullName>
        <label>Guarantor System Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASA</fullName>
                </value>
                <value>
                    <fullName>Great Lakes</fullName>
                </value>
                <value>
                    <fullName>Guarantec</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>PHEAA</fullName>
                </value>
                <value>
                    <fullName>USAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Household_Size__c</fullName>
        <description>Number of members of the household</description>
        <label>Household Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Email_2__c</fullName>
        <label>Invoice Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Invoice_Email_3__c</fullName>
        <label>Invoice Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_AutoCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AutoCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Information__c</fullName>
        <description>Free form field that provide a little more detail as to why chose SALT.</description>
        <inlineHelpText>Free form field that provides a little more detail as to why the school chose SALT. 
Information should be gathered during the pre-implementation meeting.</inlineHelpText>
        <label>Key Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Quarterly_Check_in_Call__c</fullName>
        <label>Last Quarterly Check in Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_ID__c</fullName>
        <label>Lead Record Type ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lender_StrategicLendPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if Lender has agreed to the 3 to 1 ratio of consolidation loans in exchange of payment of the default fee.</description>
        <label>Strategic Lend. Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Revenue__c</fullName>
        <inlineHelpText>This field shows the dollar amount of the annual contract price lost.</inlineHelpText>
        <label>Deprecated Lost Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost_as_of__c</fullName>
        <description>When the school was lost</description>
        <label>Lost as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MM101_Courses__c</fullName>
        <description>This field indicates the course(s) a school has made either required or recommended their students&apos; complete.</description>
        <inlineHelpText>This field indicates the course(s) a school has made either required or recommended their students&apos; complete.</inlineHelpText>
        <label>SALT Courses Recommended Courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fundamentals</fullName>
                </value>
                <value>
                    <fullName>Educational Planning</fullName>
                </value>
                <value>
                    <fullName>Internships Incomes and Careers</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Money Management</fullName>
                </value>
                <value>
                    <fullName>Budgeting</fullName>
                </value>
                <value>
                    <fullName>Student Loans</fullName>
                </value>
                <value>
                    <fullName>Student Loan Repayment</fullName>
                </value>
                <value>
                    <fullName>Credit and Debt Management</fullName>
                </value>
                <value>
                    <fullName>Saving and Investing</fullName>
                </value>
                <value>
                    <fullName>Risk Management</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MM101_Customized_Resource_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a school wants customized resources within their instance of SALT Courses check this box and then fill out the SALT Courses Customized Resources Form</description>
        <inlineHelpText>If a school wants customized resources within their instance of SALT Courses check this box and then fill out the SALT Courses Customized Resources Form</inlineHelpText>
        <label>SALT Courses Customized Resource Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MM101_Report_Frequency__c</fullName>
        <label>SALT Courses Report Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MM101_Requirement_Details__c</fullName>
        <label>SALT Courses Requirement Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MM101_Version__c</fullName>
        <label>SALT Courses Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Version 1</fullName>
                </value>
                <value>
                    <fullName>Version 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Activation_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Membership Activation Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MyMoney_101_Requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a school requires MyMoney101 in general</description>
        <inlineHelpText>If a school requires MyMoney101 in general</inlineHelpText>
        <label>SALT Courses Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Quarterly_Check_In_Call__c</fullName>
        <label>Next Quarterly Check In Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_ASA__c</fullName>
        <formula>if(not(begins(Upper(Name),&apos;ASA&apos;)),true,false)</formula>
        <label>Not ASA</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>